# aicapstone

./: .gitignore  ClAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
docs/: getting_started.md  isaaclab_leisaac_tutorial.md  lerobot-model-format.md  lerobot_training.md  standalone_env_config_export.md  synthetic-data-generation.md  synthetic_data_generation.md  umi_pipeline.md
leisaac/docs/docs/docs/tutorials/: franka_joint_space_cup_stacking.md
leisaac/scripts/evaluation/: policy_inference.py
leisaac/source/leisaac/leisaac/assets/robots/: franka.py
leisaac/source/leisaac/leisaac/assets/scenes/: ED305_kitchen.py
leisaac/source/leisaac/leisaac/datagen/state_machine/: __init__.py
leisaac/source/leisaac/leisaac/devices/keyboard/: so101_keyboard.py
leisaac/source/leisaac/leisaac/tasks/cup_stacking/: cup_stacking_env_cfg.py
leisaac/source/leisaac/leisaac/tasks/cup_stacking/mdp/: terminations.py
leisaac/source/leisaac/leisaac/tasks/template/: __init__.py
scripts/: gopher.py  rollout.py  teleop.py
scripts/datagen/: generate.py
scripts/datagen/state_machine/: generate.py
source/leisaac/leisaac/: __init__.py
source/leisaac/leisaac/tasks/: __init__.py
source/leisaac/leisaac/tasks/cup_stacking/: __init__.py
source/leisaac/leisaac/tasks/template/: __init__.py
tests/: test_datagen_cli.py  test_external_task_resolver.py  test_object_poses_loader.py  test_repo_layout.py  test_single_arm_franka_cfg.py
tests/fixtures/: test_poses.json
tmp/example_dining_room/demos/mapping/: object_poses.json
tmp/example_kitchen/demos/mapping/: object_poses.json
tmp/example_living_room/demos/mapping/: object_poses.json
