[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[project]
name = "aicapstone"
version = "0.1.0"
description = "UV workspace root for the MVP repo." 
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "umi",
    "simulator",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff>=0.12.11",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
umi = { workspace = true }
simulator = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
